--- a/assets/css/screen.ui.css
+++ b/assets/css/screen.ui.css
@@ -162,6 +162,10 @@ a, a > span, button, button > span {
   height: 100%;
 }
 .wrap_section h1 {
+  position: fixed;
+  top: 48px;
+  left: 48px;
+  z-index: 2;
   background-image: url("../image/h1_b.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -170,16 +174,12 @@ a, a > span, button, button > span {
   overflow: hidden;
   font-size: 0;
   line-height: 0;
-  position: absolute;
-  top: 48px;
-  left: 48px;
-  z-index: 2;
   display: block;
   width: 72px;
   height: 78px;
 }
 .wrap_section h2 {
-  position: absolute;
+  position: fixed;
   top: calc(50% - 47px);
   left: 48px;
   z-index: 2;
@@ -355,25 +355,12 @@ input[type=text], input[type=password], input[type=email] {
   width: auto;
 }
 input[type=text].border-type1, input[type=password].border-type1, input[type=email].border-type1 {
-  font-size: 25px;
+  font-size: 14px;
   font-weight: 400;
   color: #000;
-  font-family: "Namoo GothicR";
-  border-radius: 12px;
-  border: dotted 1px #ed8ba7;
-  background-color: #fff;
-  min-height: 36px;
-  line-height: 36px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-input[type=text].border-type2, input[type=password].border-type2, input[type=email].border-type2 {
-  font-size: 25px;
-  font-weight: 400;
-  color: #000;
-  font-family: "Namoo GothicR";
-  border-radius: 12px;
-  border: dotted 1px #8199cf;
+  font-family: "SUIT";
+  border-radius: 8px;
+  border: solid 1px #e8ecef;
   background-color: #fff;
   min-height: 36px;
   line-height: 36px;
@@ -2299,5 +2286,114 @@ input[type=text]:disabled::placeholder, input[type=password]:disabled::placehold
   padding-right: 180px !important;
 }
 
+@media (min-width: 640px) and (max-width: 999px) {
+  .wrap_template.bg_visual1::before {
+    width: 100%;
+  }
+  .wrap_section {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    width: 480px;
+    height: auto;
+    border-radius: 16px;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  .wrap_section h1 {
+    background-image: url("../image/h1_s.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    width: 104px;
+    height: 32px;
+  }
+  .wrap_section h2 {
+    text-indent: -99999em;
+    overflow: hidden;
+    font-size: 0;
+    line-height: 0;
+  }
+  .wrap_section h2 strong {
+    text-indent: -99999em;
+    overflow: hidden;
+    font-size: 0;
+    line-height: 0;
+  }
+  .wrap_section .go_home {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    z-index: 2;
+  }
+  .wrap_section .wrap_contents {
+    padding-top: 120px;
+    padding-bottom: 32px;
+  }
+}
+@media (max-width: 639px) {
+  .wrap_template.bg_visual1::before {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-image: none;
+    width: 100%;
+    height: 100%;
+    content: none;
+  }
+  .wrap_section {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    min-width: 360px;
+    height: auto;
+    border-radius: 0;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
+  }
+  .wrap_section h1 {
+    background-image: url("../image/h1_s.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    z-index: 2;
+    width: 78px;
+    height: 24px;
+  }
+  .wrap_section h2 {
+    text-indent: -99999em;
+    overflow: hidden;
+    font-size: 0;
+    line-height: 0;
+  }
+  .wrap_section h2 strong {
+    text-indent: -99999em;
+    overflow: hidden;
+    font-size: 0;
+    line-height: 0;
+  }
+  .wrap_section .go_home {
+    position: absolute;
+    top: 18px;
+    right: 18px;
+    z-index: 2;
+  }
+  .wrap_section .wrap_contents {
+    padding: 120px 24px 32px;
+  }
+}
 /* 공용 */
 /*# sourceMappingURL=../../sourcemaps/assets/css/screen.ui.css.map */
